--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "shop",
+  "name": "storage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blaumaus/react-alert": "^7.0.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "awesome-snackbar": "^2.0.7",
+    "axios": "^1.7.2",
+    "lucide-react": "^0.407.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
